# FileFinder9000

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
images/: icon.icns  icon.xbm
scripts/: build.py  ico_creator.py
